# alfred

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  heroku.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2020-10-01_b5f220464acf_create_alfred_table.py  d1c9d88e5a91_create_user_table.py
alfred/: main.py
alfred/api/: __init__.py
alfred/api/v1/: __init__.py  client_endpoint.py  friend_endpoint.py  recommendations_endpoint.py  scheduler_endpoint.py  user_endpoint.py
alfred/core/: config.py  constants.py  processors.py  utils.py
alfred/crud/: clients.py  friends.py  users.py
alfred/db/: db_utils.py
alfred/lib/: __init__.py  scheduler.py  twilio_helper.py  typeform.py
alfred/models/: __init__.py  client.py  friend.py  friends_table_payload.py  twilio_payload.py  typeform_payload.py  update_friend_payload.py  user.py
ci/: Dockerfile  docker-compose.yml
ci/scripts/: run.sh  start-deps.sh
name/: main.py
name/core/: config.py
name/db/: db_utils.py
name_data/postgresql/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
name_data/postgresql/pg_stat/: db_0.stat  db_13117.stat  db_16384.stat  global.stat
scheduler/: main.py  scheduler.py
scheduler/core/: utils.py
scheduler/tasks/: __init__.py
tests/: conftest.py  helper.py  test_main.py
tests/api/v1/: test_client_endpoint.py  test_friend_endpoint.py
tests/fixtures/: create_client_payload.json  create_friends_payload.json  twilio_auto_ml_payload.json  twl_gather_birthday_payload.json  type_form_payload.json
tests/lib/: twilio_helper_test.py
(+57 files in other folders)
