[tool.poetry]
name = "alfred"
version = "0.1.0"
description = ""
authors = ["christian-miljkovic <christian.miljkovic@gmail.com>"]

[tool.poetry.dependencies]
asyncpg = "^0.18.3"
alembic = "^1.4.2"
databases = "0.2.2"
fastapi = "^0.52.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.4"
python = "^3.7"
python-multipart = "^0.0.5"
requests = "^2.22"
twilio = "^6.38.0"
uvicorn = "^0.8.2"
black = "^20.8b1"
APScheduler = "^3.6.3"


[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.7.9"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.10.0"
nest-asyncio = "^1.2"
pytest-mock = "^3.3.1"

[tool.black]
line-length = 120
target_version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.alfred"
